--- a/example/frontend/src/.gitignore
+++ b/example/frontend/src/.gitignore
@@ -1,13 +1,8 @@
 
 # UCPeM generated, write above to not be overwritten
 vue3gui
-remoteUIFrontend
-remoteUICommon
 structSync
 struct
 dependencyInjection
 eventLib
-virtualNetworkModem
-virtualNetwork
-registry
-comTypes
+exampleCommon
