--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "dependencies": {
         "dotenv": "^16.0.1",
+        "esbuild": "^0.14.48",
         "express": "^4.18.1",
         "socket.io": "^4.5.1",
         "source-map-support": "^0.5.19",
