--- a/example/frontend/src/.gitignore
+++ b/example/frontend/src/.gitignore
@@ -1,8 +1,8 @@
 
 # UCPeM generated, write above to not be overwritten
-vue3gui
-structSync
-struct
-dependencyInjection
-eventLib
-exampleCommon
+/vue3gui
+/structSync
+/struct
+/dependencyInjection
+/eventLib
+/exampleCommon
