--- a/view/src/.gitignore
+++ b/view/src/.gitignore
@@ -1,13 +1,13 @@
 
 # UCPeM generated, write above to not be overwritten
-vue3gui
-remoteUIFrontend
-remoteUICommon
-structSync
-struct
-dependencyInjection
-eventLib
-virtualNetworkModem
-virtualNetwork
-registry
-comTypes
+/vue3gui
+/remoteUIFrontend
+/remoteUICommon
+/structSync
+/struct
+/dependencyInjection
+/eventLib
+/virtualNetworkModem
+/virtualNetwork
+/registry
+/comTypes
